[package]
name = "cargo-deb"
license = "MIT"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>", "Kornel Lesiński <kornel@geekhood.net>"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::build-utils"]
description = "Make Debian packages (.deb) easily with a Cargo subcommand"
documentation = "https://docs.rs/cargo-deb"
homepage = "https://github.com/mmstick/cargo-deb#readme"
keywords = ["debian", "ubuntu", "package", "cargo", "subcommand"]
repository = "https://github.com/mmstick/cargo-deb"
readme = "README.md"
version = "1.21.1"
edition = "2018"

[package.metadata.deb]
maintainer = "Michael Aaron Murphy <mmstickman@gmail.com>"
copyright = "2016-2017, Michael Aaron Murphy, Kornel Lesiński"
license-file = ["LICENSE", "5"]
extended-description = """\
A simple subcommand for the Cargo package manager for \
building Debian packages from Rust projects."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/cargo-deb", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
]

[lib]
name = "cargo_deb"
path = "src/lib.rs"
doc = true

[[bin]]
name = "cargo-deb"
path = "src/main.rs"
doc = false

[badges]
travis-ci = { repository = "mmstick/cargo-deb" }

[dependencies]
getopts = "0.2.18"
md5 = "0.6.0"
quick-error = "1.2.2"
xz2 = { version = "0.1.6", optional = true }
serde = "1.0.77"
serde_derive = "1.0.11"
serde_json = "1.0.2"
tar = "0.4.16"
toml = "0.5.1"
flate2 = "1.0"
glob = "0.3"
ar = "0.8"
cargo_toml = "0.8"
rayon = "1.0.3"

[features]
default = ["lzma"]
lzma = ["xz2"]

[profile.release]
lto = true
opt-level = 3

[dev-dependencies]
tempdir = "0.3.6"

[workspace]
exclude = ["example"]
