[package]
name = "cargo-deb"
license = "MIT"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>", "Kornel Lesiński <kornel@geekhood.net>"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::build-utils"]
description = "Make Debian packages (.deb) easily with a Cargo subcommand"
documentation = "https://docs.rs/cargo-deb"
homepage = "https://github.com/mmstick/cargo-deb#readme"
keywords = ["debian", "ubuntu", "package", "cargo", "subcommand"]
repository = "https://github.com/mmstick/cargo-deb"
readme = "README.md"
version = "1.29.1"
edition = "2018"

[package.metadata.deb]
maintainer = "Michael Aaron Murphy <mmstickman@gmail.com>"
copyright = "2016-2017, Michael Aaron Murphy, Kornel Lesiński"
license-file = ["LICENSE", "5"]
extended-description = """\
A simple subcommand for the Cargo package manager for \
building Debian packages from Rust projects."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/cargo-deb", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
]

[lib]
name = "cargo_deb"
path = "src/lib.rs"
doc = true

[[bin]]
name = "cargo-deb"
path = "src/main.rs"
doc = false

[badges]
travis-ci = { repository = "mmstick/cargo-deb" }

[dependencies]
getopts = "0.2.21"
md5 = "0.7"
quick-error = "2"
xz2 = { version = "0.1.6", optional = true }
serde = { version = "1.0.77", features = ["derive"] }
serde_json = "1.0.2"
tar = "0.4.32"
toml = "0.5.8"
zopfli = "0.4.0"
glob = "0.3"
ar = "0.8"
cargo_toml = "0.8"
rayon = "1.0.3"
regex = { version = "1.3.1", default-features = false, features = ["std"] }
itertools = "0.10"
num_cpus = { version = "1.13", optional = true }

[features]
default = ["lzma"]
lzma = ["xz2", "num_cpus"]

[profile.release]
lto = true
opt-level = 3

[dev-dependencies]
tempdir = "0.3.7"
mockall = "0.9.1"
rstest = "0.6.4"
lazy_static = "1.4.0"

[workspace]
exclude = ["example"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
