[package]
name = "example"
version = "0.1.0"

[dependencies]

[package.metadata.deb]
maintainer = "cargo-deb developers <cargo-deb@example.invalid>"
copyright = "2017, cargo-deb developers."
license-file = ["LICENSE", "2"]
extended-description = "example project for cargo-deb"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    # binary
    ["target/release/example", "usr/bin/", "755"],
    # assets
    ["assets/*", "var/lib/example", "644"],
    ["3.txt", "var/lib/example/3.txt", "644"],
]
changelog = "changelog"
